-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: None
-
Component/s: hotspot
-
b09
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8235508 | 11.0.7 | Jiangli Zhou | P3 | Resolved | Fixed | b01 |
After JDK-8209657 Refactor filemap.hpp to simplify integration with Serviceability Agent, if you build without precompiled headers, the build will fail with:
hotspot/variant-server/libjvm/objs/filemap.o: In function `FileMapInfo::write_bytes(void const*, unsigned long)':
/scratch/cccheung/jdk-hs-hotspot/share/memory/filemap.cpp:695: undefined reference to `os::write(int, void const*, unsigned int)'
hotspot/variant-server/libjvm/objs/filemap.o: In function `FileMapInfo::write_bytes(void const*, unsigned long)':
/scratch/cccheung/jdk-hs-hotspot/share/memory/filemap.cpp:695: undefined reference to `os::write(int, void const*, unsigned int)'
- backported by
-
JDK-8235508 Undefined reference to os::write after JDK-8209657 (filemap.hpp cleanup)
-
- Resolved
-
- relates to
-
JDK-8209657 Refactor filemap.hpp to simplify integration with Serviceability Agent
-
- Resolved
-