8209826: Undefined reference to os::write after JDK-8209657 (filemap.hpp cleanup)

Include os_inline.hpp instead

Reviewed-by: jiangli